<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/purple"
        android:textSize="20dp"
        android:id="@+id/T1"
        ></TextView>
    
    <TextView
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/txtSpace"
/>
<TextView
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/txtFirstNum"
 android:textSize="17dp"
/>
<EditText
android:inputType="numberDecimal"
android:id="@+id/EditTxt01"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="17dp">
</EditText>
<TextView
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/txtSpace"
/>
<TextView
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/txtSecondNum"
 android:textSize="17dp"
/>
<EditText
android:inputType="numberDecimal"
android:id="@+id/EditTxt02"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="17dp">
</EditText>
<TextView
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/txtSpace"
/>
<TextView
android:id="@+id/TxtView01"
android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:textColor="@color/darkblue"
 android:textSize="19dp"
/>

<Button
    android:id="@+id/Btn01"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="Result"
    android:layout_gravity="center" >

</Button>
</LinearLayout>